Update Test Module Multi Label.ipynb file paths

--- a/MultiLabel_Project4_Test /Test Module Multi Label.ipynb
+++ b/MultiLabel_Project4_Test /Test Module Multi Label.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#import directory\n",
-    "image_directory='/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images'"
+    "image_directory=''../MultiLabel_Project4_Test /P4_MultiLabel_Images''"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "#Read dataframe\n",
-    "df = pd.read_csv('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /Project_4_MultiLabel_Test.csv')    "
+    "df = pd.read_csv('../MultiLabel_Project4_Test /Project_4_MultiLabel_Test.csv')    "
    ]
   },
   {
@@ -607,7 +607,7 @@
    "source": [
     "#Validate on an image\n",
     "\n",
-    "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/70.png', target_size=(200,200,3))\n",
+    "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/70.png', target_size=(200,200,3))\n",
     "\n",
     "img = image.img_to_array(img)\n",
     "img = img/255.\n",
@@ -681,7 +681,7 @@
     }
    ],
    "source": [
-    "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/3.jpg', target_size=(200,200,3))\n",
+    "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/3.jpg', target_size=(200,200,3))\n",
     "\n",
     "img = image.img_to_array(img)\n",
     "img = img/255.\n",
@@ -755,7 +755,7 @@
     }
    ],
    "source": [
-    "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/116.jpg', target_size=(200,200,3))\n",
+    "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/116.jpg', target_size=(200,200,3))\n",
     "\n",
     "img = image.img_to_array(img)\n",
     "img = img/255.\n",
@@ -829,7 +829,7 @@
     }
    ],
    "source": [
-    "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/95.jpg', target_size=(200,200,3))\n",
+    "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/95.jpg', target_size=(200,200,3))\n",
     "\n",
     "img = image.img_to_array(img)\n",
     "img = img/255.\n",
