Update Test Module Multi Label.ipynb

--- a/MultiLabel_Project4_Test /Test Module Multi Label.ipynb
+++ b/MultiLabel_Project4_Test /Test Module Multi Label.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "#import directory\n",
-    "image_directory=''../MultiLabel_Project4_Test /P4_MultiLabel_Images''"
+    "image_directory='../MultiLabel_Project4_Test /P4_MultiLabel_Images'"
    ]
   },
   {
