--- a/Part2_Machine_Learning_Models.ipynb
+++ b/Part2_Machine_Learning_Models.ipynb
@@ -1401,10 +1401,10 @@
       "cell_type": "code",
       "source": [
         "#import directory\n",
-        "image_directory='/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images'\n",
+        "image_directory='../MultiLabel_Project4_Test /P4_MultiLabel_Images'\n",
         "\n",
         "#Read dataframe\n",
-        "df = pd.read_csv('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /Project_4_MultiLabel_Test.csv')\n",
+        "df = pd.read_csv('../MultiLabel_Project4_Test /Project_4_MultiLabel_Test.csv')\n",
         "\n",
         "# List files in the image directory\n",
         "image_files = [f for f in os.listdir(image_directory) if f.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
@@ -1560,7 +1560,7 @@
       "source": [
         "#Validate on an image\n",
         "\n",
-        "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/70.png', target_size=(200,200,3))\n",
+        "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/70.jpg', target_size=(200,200,3))\n",
         "\n",
         "img = image.img_to_array(img)\n",
         "img = img/255.\n",
@@ -1589,7 +1589,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/3.jpg', target_size=(200,200,3))\n",
+        "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/3.jpg', target_size=(200,200,3))\n",
         "\n",
         "img = image.img_to_array(img)\n",
         "img = img/255.\n",
@@ -1617,7 +1617,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/116.jpg', target_size=(200,200,3))\n",
+        "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/116.jpg', target_size=(200,200,3))\n",
         "\n",
         "img = image.img_to_array(img)\n",
         "img = img/255.\n",
@@ -1643,7 +1643,7 @@
     {
       "cell_type": "code",
       "source": [
-        "img = image.load_img('/Users/pcn08/Desktop/MultiLabel_Project_ 4_Test /P4_MultiLabel_Images/95.jpg', target_size=(200,200,3))\n",
+        "img = image.load_img('../MultiLabel_Project4_Test /P4_MultiLabel_Images/95.jpg', target_size=(200,200,3))\n",
         "\n",
         "img = image.img_to_array(img)\n",
         "img = img/255.\n",
